--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,7 @@
             <h4 class="mb-0">User Registration</h4>
           </div>
           <div class="card-body">
-            <form action="/register" method="POST">
+            <form action="/" method="POST">
               <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" required>
