--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -76,7 +76,7 @@
 
     <div class="container">
         <h2>User Dashboard</h2>
-        <a href="/getform" class="add-btn"><i class="fas fa-user-plus"></i> Add User</a>
+        <!-- <a href="/getform" class="add-btn"><i class="fas fa-user-plus"></i> Add User</a> -->
 
         <% if (users && users.length > 0) { %>
             <table id="userTable">
